<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/color_header"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/color_bg_common"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

    <include layout="@layout/search_title_xml" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_11_dip"

        android:orientation="vertical"
        android:paddingBottom="@dimen/dimen_1_dip"
        android:paddingTop="@dimen/dimen_1_dip" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="@dimen/dimen_380_dip"
            android:layout_height="@dimen/dimen_47_dip"
            android:layout_marginLeft="@dimen/dimen_16_dip"
            android:layout_marginRight="@dimen/dimen_10_dip"
            android:layout_marginTop="@dimen/dimen_4_dip"
            android:background="@drawable/shape_search_app_bg_yj"
            android:orientation="horizontal" >

            <!-- 输入的搜索信息 -->

            <EditText
                android:id="@+id/et_search"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="4"
                android:background="@null"
                android:drawableLeft="@drawable/ic_search_app_left"
                android:gravity="center_vertical"
                android:hint="@string/search_hint_test"
                android:imeOptions="actionSearch"
                android:singleLine="true"


                style="@style/text_16_black"
                 />

            <!-- 清空搜索文字按钮 -->

            <LinearLayout
                android:id="@+id/layout_clear_search_text"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/btn_clear_search_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="@dimen/dimen_10_dip"
                    android:contentDescription="@null"
                    android:padding="@dimen/dimen_6_dip"
                    android:src="@drawable/icon_delete" 
                     android:visibility="gone"
                    />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="@dimen/dimen_70_dip"
            android:layout_height="@dimen/dimen_50_dip"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/linearLayout1"
            android:gravity="center"
            android:text="@string/title_activity_search_fragment"
            android:textSize="12sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/search_relatve_all"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"

         >

        <RelativeLayout
            android:id="@+id/search_relatve_l"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dimen_16_dip"
                android:layout_marginTop="@dimen/dimen_16_dip"
                android:src="@drawable/search_br_icon" />

            <TextView
                android:id="@+id/textView1"
                style="@style/text_16_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dimen_5_dip"
                android:layout_toRightOf="@+id/imageView1"
                android:text="@string/title_search_fragment_s" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/search_relatve_br1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5_dip" >

            <Button
                android:id="@+id/button1"
                style="@style/text_16_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/dimen_16_dip"
                android:background="@drawable/search_btn1"
                android:text="@string/search_btn_test1" />

            <Button
                android:id="@+id/button2"
                style="@style/text_16_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/dimen_16_dip"
                android:layout_toRightOf="@+id/button1"
                android:background="@drawable/search_btn2"
                android:text="@string/search_btn_test2" />

            <Button
                android:id="@+id/button3"
                style="@style/text_16_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
               android:layout_marginLeft="@dimen/dimen_16_dip"
                android:layout_toRightOf="@+id/button2"
                android:background="@drawable/search_btn3"
                android:text="@string/search_btn_test3" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/search_relatve_br2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <Button
                android:id="@+id/button4"
                style="@style/text_16_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/dimen_16_dip"
                android:background="@drawable/search_btn4"
                android:text="@string/search_btn_test4" />

            <Button
                android:id="@+id/button5"
                style="@style/text_16_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
              android:layout_marginLeft="@dimen/dimen_16_dip"
                android:layout_toRightOf="@+id/button4"
                android:background="@drawable/search_btn5"
                android:text="@string/search_btn_test5" />

            <Button
                android:id="@+id/button6"
                style="@style/text_16_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
             android:layout_marginLeft="@dimen/dimen_16_dip"
                android:layout_toRightOf="@+id/button5"
                android:background="@drawable/search_btn6"
                android:text="@string/search_btn_test6" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/search_relatve_br3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <Button
                android:id="@+id/button7"
                style="@style/text_16_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/dimen_16_dip"
                android:background="@drawable/search_btn7"
                android:text="@string/search_btn_test7" />

            <Button
                android:id="@+id/button8"
                style="@style/text_16_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/dimen_16_dip"
                android:layout_toRightOf="@+id/button7"
                android:background="@drawable/search_btn8"
                android:text="@string/search_btn_test8" />

            <Button
                android:id="@+id/button9"
                style="@style/text_16_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/dimen_16_dip"
                android:layout_toRightOf="@+id/button8"
                android:background="@drawable/search_btn9"
                android:text="@string/search_btn_test9" />
        </RelativeLayout>

        <RelativeLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">
    </RelativeLayout>
    </LinearLayout>

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/activityTitle"
            android:background="@color/white"
            android:divider="@null"
            android:listSelector="@android:color/transparent"
            android:paddingTop="@dimen/dimen_10_dip"
            android:visibility="gone" >
        </ListView>
    </LinearLayout>
</RelativeLayout>