<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/father"
    android:layout_height="match_parent"
    android:background="@color/color_header"
    android:fitsSystemWindows="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_bg_common"
        android:orientation="vertical" >

        <include layout="@layout/title_with_back" />

        <RelativeLayout
            android:layout_width="@dimen/dimen_300_dip"
            android:layout_height="@dimen/dimen_40_dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_40_dip"
            android:background="@drawable/bg_edittext" >

            <EditText
                android:id="@+id/edit_account"
                style="@style/text_16_black"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/dimen_33_dip"
                android:background="@null"
                android:hint="@string/login_name_hint"
                android:inputType="phone"
                android:maxLength="11"
                android:singleLine="true"
                android:textColorHint="@color/color_hint" />

            <ImageView
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="@dimen/dimen_10_dip"
                android:contentDescription="@null"
                android:padding="6dp"
                android:src="@drawable/icon_delete"
                android:visibility="gone" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="@dimen/dimen_300_dip"
            android:layout_height="@dimen/dimen_40_dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_20_dip"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/edit_code"
                style="@style/text_16_black"
                android:layout_width="@dimen/dimen_220_dip"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_edittext_left"
                android:hint="@string/identify_code_hint"
                android:inputType="phone"
                android:maxLength="6"
                android:paddingLeft="@dimen/dimen_33_dip"
                android:singleLine="true"
                android:textColorHint="@color/color_hint" />

            <com.chomp.wifistorymachine.view.TimeButton
                android:id="@+id/btn_get_code"
                style="@style/text_16_black"
                android:layout_width="@dimen/dimen_74_dip"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimen_6_dip"
                android:background="@drawable/bg_edittext_right"
                android:contentDescription="@null"
                android:src="@drawable/btn_passwd_selector"
                android:text="@string/get_code" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="@dimen/dimen_300_dip"
            android:layout_height="@dimen/dimen_40_dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_20_dip"
            android:background="@drawable/bg_edittext" >

            <EditText
                android:id="@+id/edit_password"
                style="@style/text_16_black"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:hint="@string/login_password_hint"
                android:maxLength="20"
                android:paddingLeft="@dimen/dimen_33_dip"
                android:password="true"
                android:singleLine="true"
                android:textColorHint="@color/color_hint" />

            <ImageView
                android:id="@+id/btn_show_passwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="@dimen/dimen_10_dip"
                android:contentDescription="@null"
                android:padding="6dp"
                android:src="@drawable/btn_passwd_selector"
                android:visibility="gone" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_reset_passwd"
            style="@style/text_16_white"
            android:layout_width="@dimen/dimen_300_dip"
            android:layout_height="@dimen/dimen_40_dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_53_dip"
            android:background="@drawable/btn_red_trible_selector"
            android:text="@string/reset" >
        </Button>
    </LinearLayout>

</LinearLayout>